' Generated by PyUML Generator. Manual changes may be overwritten.
@startuml
hide empty members

package "hw" as pyuml_package_1 {
  class "hw.AddressBook" as pyuml_1 {
    + add_record(record : Record) : Record | None
    + find(name : str) : Record
    + delete(name) : None
    + get_upcoming_birthdays()
  }
  class "hw.Birthday" as pyuml_2 {
    + value
    --
    + __init__(value : str)
    - __is_valid(value)
    + value(value)
  }
  class "hw.CLInterface" as pyuml_3 {
    + dispay_book(book)
    + display_cmds()
  }
  abstract class "hw.Field" as pyuml_4 <<abstract>> {
    + value
    --
    + __init__(value)
    + {abstract} value(value)
  }
  class "hw.Name" as pyuml_5 {
    + __init__(value)
    + value(value)
  }
  class "hw.Phone" as pyuml_6 {
    + __init__(value : str) : None
    + value(value)
  }
  class "hw.Record" as pyuml_7 {
    + name : Name
    + phones : list[Unknown]
    + birthday
    --
    + __init__(name)
    - __find(phone : str, get_instance : bool = False) : int | Phone | None
    + add_phone(phone : str)
    + find_phone(phone : str)
    + remove_phone(phone : str)
    + edit_phone(old : str, new : str)
    + add_birthday(bday : str)
  }
  abstract class "hw.UserInterface" as pyuml_8 <<abstract>> {
    + {abstract} dispay_book(book)
    + {abstract} display_cmds()
  }
}

pyuml_2 --|> pyuml_4
pyuml_3 --|> pyuml_8
pyuml_5 --|> pyuml_4
pyuml_6 --|> pyuml_4
pyuml_7 *--> "1" pyuml_5 : name
@enduml
